--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color:white ;
+    width:50%;
   }
 
   #column-2 {
     background-color:black ;
+    width:50%;
   }
 
   #column-3 {
     background-color: white;
+    width:100%;
   }
 
   footer {
@@ -90,14 +93,17 @@ footer {
 
   #column-1 {
     background-color:white ;
+    width:33.33%
   }
 
   #column-2 {
     background-color:purple ;
+    width:33.33%
   }
 
   #column-3 {
     background-color:white ;
+    width:33.33%
   }
 
   footer {
